--- a/app/views/dashboards/scratch.html.erb
+++ b/app/views/dashboards/scratch.html.erb
@@ -1,50 +1,18 @@
 <h1>Dashboards#scratch</h1>
 <p>Find me in app/views/dashboards/scratch.html.erb</p>
 <h1>D3 TEST</h1>
-<div id="line-chart"></div>
-<style>
-.chart {
- border: 1px solid red;
-}
-.chart rect {
- fill: steelblue;
-}
-.chart text {
- fill: white;
- font: 10px sans-serif;
- text-anchor: end;
-}
-</style>
-<svg class="chart"></svg>
-<script>
-// Data
-var data = [4, 8, 15, 16, 23, 42];
-var width = 420,
- barHeight = 20;
-// Set the scale
-var x = d3.scale.linear()
- // .domain([0, d3.max(data)])
- .range([0, width]);
-var chart = d3.select(".chart")
- .attr("width", width);
-d3.tsv("<%= asset_path 'example_data.tsv' %>", type, function(error, data) {
- x.domain([0, d3.max(data, function(d) { return d.value; })]);
-chart.attr("height", barHeight * data.length);
-var bar = chart.selectAll("g")
- .data(data)
- .enter().append("g")
- .attr("transform", function(d, i) { return "translate(0," + i * barHeight + ")"; });
-bar.append("rect")
- .attr("width", function(d) { return x(d.value); })
- .attr("height", barHeight — 1);
-bar.append("text")
- .attr("x", function(d) { return x(d.value) — 3; })
- .attr("y", barHeight / 2)
- .attr("dy", ".35em")
- .text(function(d) { return d.value; });
-});
-function type(d) {
- d.value = +d.value; // coerce to number
- return d;
-}
+
+<div class="chart"></div>
+
+<script type="text/javascript">
+	var data = [30, 86, 168, 281, 303, 365];
+
+	d3.select(".chart")
+	  .selectAll("div")
+	  .data(data)
+	    .enter()
+	    .append("div")
+	    .style("width", function(d) { return d + "px"; })
+	    .text(function(d) { return d; });
+
 </script>
