--- a/app/views/exercises/show.html.erb
+++ b/app/views/exercises/show.html.erb
@@ -16,4 +16,5 @@
 </p>
 
 <%= link_to 'Edit', edit_exercise_path(@exercise) %> |
+<%= link_to 'Destroy', @exercise, method: :delete %> |
 <%= link_to 'Back', exercises_path %>
