consumption tracking built and seeded

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -2,7 +2,7 @@
 
 
 body{
-	padding: 2vh 2vw 2vh 2vw;
+	padding: 6vh 2vw 2vh 2vw;
 	background-color: #473939;
 	color: #c7ebd1;
 }
@@ -23,6 +23,7 @@ a:visited{
 
 .page-title{
 	text-align: center;
+	/*margin-top: 6vh;*/
 }
 
 .index-table{
@@ -68,3 +69,15 @@ a:visited{
 	padding-left: 4vw;
 	padding-right: 4vw;
 }
+
+
+/*input.miniform-check{
+	vertical-align: bottom;
+	height: 44px;
+	width: 44px;
+	min-width: 2vw;
+	min-height: 6vh;
+
+}*/
+
+/* NAVBAR STYLES */
