--- a/app/views/exercises/_mini_form.html.erb
+++ b/app/views/exercises/_mini_form.html.erb
@@ -16,7 +16,7 @@
       <tr>
         <td>
           <div class="field">
-            <%= form.text_field :date, data: { behavior: "flatpickr" }, placeholder: "date", class: "form-control" %>
+            <%= form.text_field :date, data: { behavior: "date-picker" }, placeholder: "date", class: "form-control" %>
           </div>
         </td>
         <td>
