--- a/app/views/exercises/index.html.erb
+++ b/app/views/exercises/index.html.erb
@@ -1,9 +1,9 @@
 <p id="notice"><%= notice %></p>
 
-<h1 class="page-title">Exercises</h1>
+<h1 class="page-title">Exercise</h1>
 
 
-  <%= render partial: 'exercises/new_form', locals: {exercise: Exercise.new} %>
+  <%= render partial: 'exercises/mini_form', locals: {exercise: Exercise.new} %>
 
 
 <table class="index-table">
