--- a/app/views/consumptions/_mini_form.html.erb
+++ b/app/views/consumptions/_mini_form.html.erb
@@ -11,35 +11,36 @@
     </div>
   <% end %>
 
-<table class="form-partial">
-  <tr>
-    <td>
-      <div class="form-group">
-        <%= form.text_field :date, data: { behavior: "date-picker" }, placeholder: "date", class: "form-control" %>
-      </div>    
-    </td>
-    <td>
-      <div class="form-group">
-        <%= form.text_field :description, placeholder: "description", class: "form-control" %>
-      </div>      
-    </td>
-    <td>
-      <div class="form-group">
-        <%= form.select :feeling_score, [["feel good",1],["feel neutral", 0],["feel bad",-1]], {}, {class: "form-control"}  %>
-      </div>      
-    </td>
-    <td>
-      <div class="form-group">
-        <%= form.select :win, [["win",true],["loss",false]], {}, {class: "form-control"} %>
-        
-      </div>
-    </td>
-    <td>
-      <div class="actions">
-        <%= form.submit "log", class: "btn btn-info btn-md short-text-button" %>
-      </div>
-    </td>
-  </tr>
-</table>
-  
+<div class="table-responsive">
+  <table class="form-partial">
+    <tr>
+      <td class="text-field-width">
+        <div class="form-group">
+          <%= form.text_field :date, data: { behavior: "date-picker" }, placeholder: "date", class: "form-control" %>
+        </div>    
+      </td>
+      <td class="text-field-width">
+        <div class="form-group">
+          <%= form.text_field :description, placeholder: "description", class: "form-control" %>
+        </div>      
+      </td>
+      <td>
+        <div class="form-group">
+          <%= form.select :feeling_score, [["feel good",1],["feel neutral", 0],["feel bad",-1]], {}, {class: "form-control"}  %>
+        </div>      
+      </td>
+      <td>
+        <div class="form-group">
+          <%= form.select :win, [["win",true],["loss",false]], {}, {class: "form-control"} %>
+          
+        </div>
+      </td>
+      <td class="button-cell">
+        <div class="actions">
+          <%= form.submit "log", class: "btn btn-info btn-md short-text-button" %>
+        </div>
+      </td>
+    </tr>
+  </table>
+</div>  
 <% end %>
