--- a/app/views/exercises/_mini_form.html.erb
+++ b/app/views/exercises/_mini_form.html.erb
@@ -14,18 +14,18 @@
   <div class="table-responsive">
     <table class="form-partial">
       <tr>
-        <td>
-          <div class="field">
+        <td class="text-field-width">
+          <div class="form-group">
             <%= form.text_field :date, data: { behavior: "date-picker" }, placeholder: "date", class: "form-control" %>
           </div>
         </td>
-        <td>
-          <div class="field">
+        <td class="text-field-width">
+          <div class="form-group">
             <%= form.text_field :description, placeholder: "description", class: "form-control" %>
           </div>
         </td>
-        <td>
-          <div class="field">
+        <td class="text-field-width">
+          <div class="form-group">
             <%= form.number_field :total_minutes, placeholder: "total mins", class: "form-control" %>
           </div>
         </td>
