consumption summaries drawn

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -23,7 +23,15 @@ a:visited{
 
 .page-title{
 	text-align: center;
-	/*margin-top: 6vh;*/
+}
+
+.section-title{
+	text-align: center;
+	margin-top: 4vh;
+}
+
+.section-sub-title{
+	text-align: center;
 }
 
 .index-table{
