--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -15,6 +15,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/sleep">Sleep</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/dailies/alcohol_index">Alcohol</a>
+      </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Dashboards
