--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -24,7 +24,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/consumptions/summaries">Consumption Summaries</a>
-          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="/dailies/alcohol_summary">Alcohol</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
