new homepage = today's dash

--- a/app/views/exercises/_mini_form.html.erb
+++ b/app/views/exercises/_mini_form.html.erb
@@ -16,7 +16,7 @@
       <tr>
         <td class="text-field-width">
           <div class="form-group">
-            <%= form.text_field :date, data: { behavior: "date-picker" }, placeholder: "date", class: "form-control" %>
+            <%= form.text_field :date, data: { behavior: "date-picker" }, placeholder: "date", class: "form-control", value: Date.today %>
           </div>
         </td>
         <td class="text-field-width">
