--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -84,13 +84,31 @@ a:visited{
 }
 
 
-/*input.miniform-check{
-	vertical-align: bottom;
-	height: 44px;
-	width: 44px;
-	min-width: 2vw;
-	min-height: 6vh;
+.dash-section{
+	border: dotted 1px black;
+	display: block;
+}
 
-}*/
+.dash-subsection{
+	border: dotted 1px black;
+	display: block;
+	margin: 1vh auto 1vh auto;
+	padding: 0.25vh 0 0.25vh 0;
+	text-align: center;
+	width: 33vw;
+}
 
 /* NAVBAR STYLES */
+
+
+
+
+
+
+
+
+.today-progress{
+	width: 80vw;
+	/*margin-bottom: 12px;*/
+	margin: 0 auto 4vh auto;
+}
