--- a/app/views/dailies/show.html.erb
+++ b/app/views/dailies/show.html.erb
@@ -16,4 +16,5 @@
 </p>
 
 <%= link_to 'Edit', edit_daily_path(@daily) %> |
+<%= link_to 'Destroy', @daily, method: :delete %> |
 <%= link_to 'Back', dailies_path %>
