setup review controller with views for this week, last week and trailing seven days. worked on content for last week page

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -20,6 +20,16 @@
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Reviews
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="/review/this_week">This Week</a>
+          <a class="dropdown-item" href="/review/last_week">Last Week</a>
+          <a class="dropdown-item" href="/review/trailing_seven_days">Trailing 7-day</a>
+        </div>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Dashboards
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
