--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -111,7 +111,7 @@ a:visited{
 	margin: 1vh auto 1vh auto;
 	padding: 0.25vh 0 0.25vh 0;
 	text-align: center;
-	width: 33vw;
+	max-width: 80vw;
 }
 
 /* NAVBAR STYLES */
@@ -127,4 +127,10 @@ a:visited{
 	width: 80vw;
 	/*margin-bottom: 12px;*/
 	margin: 0 auto 4vh auto;
+}
+
+
+
+.exercise-chart{
+	max-width: 100vw;
 }
