--- a/app/views/review/last_week.html.erb
+++ b/app/views/review/last_week.html.erb
@@ -2,6 +2,24 @@
 <h2 class="page-title"><%= @consumption[:start_date].inspect %> - <%= @consumption[:end_date].inspect %></h2>
 
 <div class="dash-section">
+	<h2 class="section-title">Journal</h2>
+	<div class="dash-subsection">
+		<% @journal_days = @journal.select{|date,done| done == true }.count %>
+		<%= @journal_days %> of <%= @journal.count %> journal days = <%= (@journal_days / @journal.count.to_f * 100).round(2) %>%
+	</div>
+	
+</div>
+
+<div class="dash-section">
+	<h2 class="section-title">Meditate</h2>
+	<div class="dash-subsection">
+		<% @meditation_days = @meditate.select{|date,done| done == true }.count %>
+		<%= @meditation_days %> of <%= @meditate.count %> meditation days = <%= (@meditation_days / @meditate.count.to_f * 100).round(2) %>%
+	</div>
+	
+</div>
+
+<div class="dash-section">
 	<h2 class="section-title">Consumption</h2>
 
 	<div class="dash-subsection">
@@ -21,28 +39,16 @@
 
 <div class="dash-section">
 	<h2 class="section-title">Exercise</h2>
-	<div class="dash-subsection">
-	
-	</div>
-	
-</div>
 
-<div class="dash-section">
-	<h2 class="section-title">Journal</h2>
 	<div class="dash-subsection">
-		<% @journal_days = @journal.select{|date,done| done == true }.count %>
-		<%= @journal_days %> of <%= @journal.count %> journal days = <%= (@journal_days / @journal.count.to_f * 100).round(2) %>%
+		Exercised <%= @exercise[:exercise_days] %> of <%= @exercise[:total_days] %> days = <%= @exercise[:day_percent] %>%
+		<br>
+		<%= @exercise[:avg_mins_per_day] %> avg mins per day = <%= @exercise[:avg_mins_per_day_percent] %>% of 60 mins per day goal
+		<br>
+		<%= @exercise[:total_minutes] %> total weekly mins = <%= @exercise[:total_minutes_percent] %>% of 420 total weekly mins goal
 	</div>
-	
-</div>
 
-<div class="dash-section">
-	<h2 class="section-title">Meditate</h2>
-	<div class="dash-subsection">
-		<% @meditation_days = @meditate.select{|date,done| done == true }.count %>
-		<%= @meditation_days %> of <%= @meditate.count %> meditation days = <%= (@meditation_days / @meditate.count.to_f * 100).round(2) %>%
-	</div>
-	
+	<div class="exercise-chart"></div>
 </div>
 
 
@@ -52,7 +58,7 @@
 		<% @ambrush_days = @ambrush.select{|date,done| done == true }.count %>
 		<%= @ambrush_days %> of <%= @ambrush.count %> am brush days = <%= (@ambrush_days / @ambrush.count.to_f * 100).round(2) %>%
 	</div>
-	
+	<div class="ambrush-chart"></div>
 </div>
 
 <div class="dash-section">
@@ -61,7 +67,7 @@
 		<% @pmbrush_days = @pmbrush.select{|date,done| done == true }.count %>
 		<%= @pmbrush_days %> of <%= @pmbrush.count %> pm brush days = <%= (@pmbrush_days / @pmbrush.count.to_f * 100).round(2) %>%
 	</div>
-	
+	<div class="pmbrush-chart"></div>
 </div>
 
 <div class="dash-section">
@@ -74,3 +80,176 @@
 </div>
 
 
+
+
+
+<script>
+	//d3.select('.exercise-chart').append('h1').text('text')
+
+	var data = <%= @exercise_chart_data %>;
+	//var data = [7,6,5,5,3,4,2,3,2]
+
+	var svgWidth = 400;
+	var svgHeight = 100;
+
+	var barPadding = 5;
+	var numberOfBars = data.length;
+	var barWidth = (svgWidth - (barPadding * (numberOfBars + 1))) / numberOfBars;
+
+	var svg = d3.select('.exercise-chart')
+		.append('svg')
+			.attr('width', svgWidth)
+			.attr('height', svgHeight)
+			.attr('class','bar-chart')
+			.style('display','block').style('margin','auto');
+
+	var yScale = d3.scaleLinear()
+		.domain([0,d3.max(data)])
+		.range([0,svgHeight-12]);
+
+	var barChart = svg.selectAll('rect')
+		.data(data)
+		.enter()
+			.append('rect')
+			.attr('y', function(d){
+				return svgHeight - yScale(d);
+			})
+			.attr('height', function(d){
+				return yScale(d);
+			})
+			.attr('width', barWidth)
+			.attr('transform', function(d,i){
+				var translate = [(((barWidth + barPadding) * i) + barPadding), 0];
+				return "translate(" + translate + ")";
+			})
+			.style("fill","orange")
+
+	var text = svg.selectAll("text")
+		.data(data)
+		.enter()
+		.append("text")
+		.text(function(d){
+			return `${d} mins`;
+		})
+		.attr('transform', function(d,i){
+			var translate = [(((barWidth + barPadding) * i) + barPadding + 2), svgHeight - (yScale(d)+3)];
+			return "translate(" + translate + ")";
+		})
+		.style("fill","#FFF").style("font-weight","bold");
+</script>
+
+<script>
+	var data = <%= @ambrush_chart_data %>;
+
+	var svgWidth = 400;
+	var svgHeight = 100;
+
+	var barPadding = 5;
+	var numberOfBars = data.length;
+	var barWidth = (svgWidth - (barPadding * (numberOfBars + 1))) / numberOfBars;
+
+	var svg = d3.select('.ambrush-chart')
+		.append('svg')
+			.attr('width', svgWidth)
+			.attr('height', svgHeight)
+			.attr('class','bar-chart')
+			.style('display','block').style('margin','auto');
+
+	var yScale = d3.scaleLinear()
+		.domain([0,d3.max(data)])
+		.range([0,svgHeight-12]);
+
+	var barChart = svg.selectAll('rect')
+		.data(data)
+		.enter()
+			.append('rect')
+			.attr('y', function(d){
+				return svgHeight - yScale(d);
+			})
+			.attr('height', function(d){
+				return yScale(d);
+			})
+			.attr('width', barWidth)
+			.attr('transform', function(d,i){
+				var translate = [(((barWidth + barPadding) * i) + barPadding), 0];
+				return "translate(" + translate + ")";
+			})
+			.style("fill","orange")
+
+	var text = svg.selectAll("text")
+		.data(data)
+		.enter()
+		.append("text")
+		.text(function(d){
+			if (d === 1){
+				return 'done';	
+			}
+			else{
+				return 'not done';
+			}
+			
+		})
+		.attr('transform', function(d,i){
+			var translate = [(((barWidth + barPadding) * i) + barPadding + 12), svgHeight - (yScale(d)+3)];
+			return "translate(" + translate + ")";
+		})
+		.style("fill","#FFF").style("font-weight","bold");
+</script>
+
+<script>
+	var data = <%= @pmbrush_chart_data %>;
+
+	var svgWidth = 400;
+	var svgHeight = 100;
+
+	var barPadding = 5;
+	var numberOfBars = data.length;
+	var barWidth = (svgWidth - (barPadding * (numberOfBars + 1))) / numberOfBars;
+
+	var svg = d3.select('.pmbrush-chart')
+		.append('svg')
+			.attr('width', svgWidth)
+			.attr('height', svgHeight)
+			.attr('class','bar-chart')
+			.style('display','block').style('margin','auto');
+
+	var yScale = d3.scaleLinear()
+		.domain([d3.min(data),d3.max(data)])
+		.range([0,svgHeight-12]);
+
+	var barChart = svg.selectAll('rect')
+		.data(data)
+		.enter()
+			.append('rect')
+			.attr('y', function(d){
+				return svgHeight - yScale(d);
+			})
+			.attr('height', function(d){
+				return yScale(d);
+			})
+			.attr('width', barWidth)
+			.attr('transform', function(d,i){
+				var translate = [(((barWidth + barPadding) * i) + barPadding), 0];
+				return "translate(" + translate + ")";
+			})
+			.style("fill","orange")
+
+	var text = svg.selectAll("text")
+		.data(data)
+		.enter()
+		.append("text")
+		.text(function(d){
+			if (d === 1){
+				return 'done';	
+			}
+			else{
+				return 'not done';
+			}
+			
+		})
+		.attr('transform', function(d,i){
+			var translate = [(((barWidth + barPadding) * i) + barPadding + 12), svgHeight - (yScale(d)+3)];
+			return "translate(" + translate + ")";
+		})
+		.style("fill","#FFF").style("font-weight","bold");
+</script>
