--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -77,7 +77,7 @@ a:visited{
 .mini-habits-table{
 	margin: 2vh auto 2vh auto;
 	thead{
-		border-bottom: solid 1px black;
+		border-bottom: dotted 1px black;
 	}
 	th{
 		padding: 0 0.75vw 0 0.75vw;
