--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,6 +13,9 @@
         <a class="nav-link" href="/exercises">Exercise</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="/dailies">Habits</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="/sleep">Sleep</a>
       </li>
       <li class="nav-item">
