--- a/app/views/sleeps/show.html.erb
+++ b/app/views/sleeps/show.html.erb
@@ -26,4 +26,5 @@
 </p>
 
 <%= link_to 'Edit', edit_sleep_path(@sleep) %> |
+<%= link_to 'Destroy', @sleep, method: :delete %> |
 <%= link_to 'Back', sleeps_path %>
