--- a/app/views/sleeps/index.html.erb
+++ b/app/views/sleeps/index.html.erb
@@ -8,7 +8,7 @@
   <thead>
     <tr>
       <th>Date</th>
-      <th style="border-right: dotted 2px black;">Total hrs</th>
+      <th>Total hrs</th>
       <th>Total mins</th>
       <th>Hrs</th>
       <th>Mins</th>
@@ -19,7 +19,7 @@
     <% @sleeps.each do |sleep| %>
       <tr>
         <td class="center-text"><%= link_to sleep.date, sleep %></td>
-        <td class="center-text" style="border-right: dotted 2px black;"><%= sleep.total_hrs %></td>
+        <td class="center-text"><%= sleep.total_hrs %></td>
         <td class="center-text"><%= sleep.total_mins %></td>
         <td class="center-text"><%= sleep.hrs %></td>
         <td class="center-text"><%= sleep.mins %></td>
