--- a/app/views/consumptions/index.html.erb
+++ b/app/views/consumptions/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1 class="page-title">Consumption</h1>
 
-<%= render partial: 'consumptions/mini_form', locals: {consumption: Consumption.new} %>
+<%= render partial: 'consumptions/partials/mini_form', locals: {consumption: Consumption.new} %>
 
 <table class="index-table">
   <thead>
