--- a/app/views/exercises/index.html.erb
+++ b/app/views/exercises/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1 class="page-title">Exercise</h1>
 
-  <%= render partial: 'exercises/mini_form', locals: {exercise: @todays_exercise} %>
+  <%= render partial: 'exercises/partials/mini_form', locals: {exercise: @todays_exercise} %>
 
 <table class="index-table">
   <thead>
