--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -32,6 +32,7 @@
           <a class="dropdown-item" href="/review/this_week">This Week</a>
           <a class="dropdown-item" href="/review/last_week">Last Week</a>
           <a class="dropdown-item" href="/review/trailing_seven_days">Trailing 7-day</a>
+          <a class="dropdown-item" href="/review/this_year_to_date">Year to Date</a>
         </div>
       </li>
       <li class="nav-item dropdown">
