--- a/app/views/review/last_week.html.erb
+++ b/app/views/review/last_week.html.erb
@@ -7,7 +7,7 @@
 			<% @journal_days = @journal.select{|date,done| done == true }.count %>
 			<%= @journal_days %> of <%= @journal.count %> journal days = <%= (@journal_days / @journal.count.to_f * 100).round(2) %>%
 		</h5>
-
+		<div class="journal-chart"></div>
 </div>
 
 <div class="dash-section">
@@ -97,10 +97,32 @@
 	
 </div>
 
+<div class="dash-section">
+	<h2 class="section-title">Sleep</h2>
+
+	<h5 class="section-sub-title">
+		<%= @sleep[:avg_hrs_per_night] %> avg hours per night = <%= @sleep[:avg_hrs_per_night_percent] %>% of 7 hrs per night goal
+		<br>
+		<%= @sleep[:total_hrs] %> total weekly hrs = <%= @sleep[:total_hrs_percent] %>% of 49 total weekly hours goal
+	</h5>
+	<br>
+	<div class="sleep-chart"></div>
+</div>
+
+<div class="dash-section">
+	<h2 class="section-title">HRV</h2>
+
+	<h5 class="section-sub-title">
+		<%= @hrv[:avg_hrv_per_night] %> avg hrv per night
+	</h5>
+	<br>
+	<div class="hrv-chart"></div>
+</div>
 
 
 
 
+<!-- EXERCISE -->
 <script>
 	//d3.select('.exercise-chart').append('h1').text('text')
 
@@ -155,7 +177,7 @@
 		})
 		.style("fill","#FFF").style("font-weight","bold");
 </script>
-
+<!-- AM BRUSH -->
 <script>
 	var data = <%= @ambrush_chart_data %>;
 
@@ -213,7 +235,7 @@
 		})
 		.style("fill","#FFF").style("font-weight","bold");
 </script>
-
+<!-- PM BRUSH -->
 <script>
 	var data = <%= @pmbrush_chart_data %>;
 
@@ -271,3 +293,180 @@
 		})
 		.style("fill","#FFF").style("font-weight","bold");
 </script>
+<!-- JOURNAL -->
+<script>
+	var data = <%= @journal_chart_data %>;
+
+	var svgWidth = 400;
+	var svgHeight = 100;
+
+	var barPadding = 5;
+	var numberOfBars = data.length;
+	var barWidth = (svgWidth - (barPadding * (numberOfBars + 1))) / numberOfBars;
+
+	var svg = d3.select('.journal-chart')
+		.append('svg')
+			.attr('width', svgWidth)
+			.attr('height', svgHeight)
+			.attr('class','bar-chart')
+			.style('display','block').style('margin','auto');
+
+	var yScale = d3.scaleLinear()
+		.domain([d3.min(data),d3.max(data)])
+		.range([0,svgHeight-12]);
+
+	var barChart = svg.selectAll('rect')
+		.data(data)
+		.enter()
+			.append('rect')
+			.attr('y', function(d){
+				return svgHeight - yScale(d);
+			})
+			.attr('height', function(d){
+				return yScale(d);
+			})
+			.attr('width', barWidth)
+			.attr('transform', function(d,i){
+				var translate = [(((barWidth + barPadding) * i) + barPadding), 0];
+				return "translate(" + translate + ")";
+			})
+			.style("fill","orange")
+
+	var text = svg.selectAll("text")
+		.data(data)
+		.enter()
+		.append("text")
+		.text(function(d){
+			if (d === 1){
+				return 'done';	
+			}
+			else{
+				return 'not done';
+			}
+			
+		})
+		.attr('transform', function(d,i){
+			var translate = [(((barWidth + barPadding) * i) + barPadding + 12), svgHeight - (yScale(d)+3)];
+			return "translate(" + translate + ")";
+		})
+		.style("fill","#FFF").style("font-weight","bold");
+</script>
+<!-- SLEEP -->
+<script type="text/javascript">
+	
+	var data = <%= Sleep.last_week_hrs_per_night_chart_data %>;
+
+	var svgWidth = 400;
+	var svgHeight = 100;
+
+	var barPadding = 5;
+	var numberOfBars = data.length;
+	var barWidth = (svgWidth - (barPadding * (numberOfBars + 1))) / numberOfBars;
+
+	var svg = d3.select('.sleep-chart')
+		.append('svg')
+			.attr('width', svgWidth)
+			.attr('height', svgHeight)
+			.attr('class','bar-chart')
+			.style('display','block').style('margin','auto');
+
+	var yScale = d3.scaleLinear()
+		.domain([0,d3.max(data)])
+		.range([0,svgHeight-12]);
+
+	var barChart = svg.selectAll('rect')
+		.data(data)
+		.enter()
+			.append('rect')
+			.attr('y', function(d){
+				return svgHeight - yScale(d);
+			})
+			.attr('height', function(d){
+				return yScale(d);
+			})
+			.attr('width', barWidth)
+			.attr('transform', function(d,i){
+				var translate = [(((barWidth + barPadding) * i) + barPadding), 0];
+				return "translate(" + translate + ")";
+			})
+			.style("fill", function(d){
+				if (d >= 7){
+					return "green";
+				} else {
+					return "red";	
+				}
+			})
+
+	var text = svg.selectAll("text")
+		.data(data)
+		.enter()
+		.append("text")
+		.text(function(d){
+			return `${d} hrs`;
+		})
+		.attr('transform', function(d,i){
+			var translate = [(((barWidth + barPadding) * i) + barPadding + 2), svgHeight - (yScale(d)+3)];
+			return "translate(" + translate + ")";
+		})
+		.style("fill","#FFF").style("font-weight","bold");
+</script>
+<!-- HRV -->
+<script type="text/javascript">
+	
+	var data = <%= Hrv.last_week_hrv_per_night_chart_data %>;
+
+	var svgWidth = 400;
+	var svgHeight = 100;
+
+	var barPadding = 5;
+	var numberOfBars = data.length;
+	var barWidth = (svgWidth - (barPadding * (numberOfBars + 1))) / numberOfBars;
+
+	var svg = d3.select('.hrv-chart')
+		.append('svg')
+			.attr('width', svgWidth)
+			.attr('height', svgHeight)
+			.attr('class','bar-chart')
+			.style('display','block').style('margin','auto');
+
+	var yScale = d3.scaleLinear()
+		.domain([0,d3.max(data)])
+		.range([0,svgHeight-12]);
+
+	var barChart = svg.selectAll('rect')
+		.data(data)
+		.enter()
+			.append('rect')
+			.attr('y', function(d){
+				return svgHeight - yScale(d);
+			})
+			.attr('height', function(d){
+				return yScale(d);
+			})
+			.attr('width', barWidth)
+			.attr('transform', function(d,i){
+				var translate = [(((barWidth + barPadding) * i) + barPadding), 0];
+				return "translate(" + translate + ")";
+			})
+			.style("fill", function(d){
+				if (d >= 40){
+					return "green";
+				} else {
+					return "red";	
+				}
+			})
+
+	var text = svg.selectAll("text")
+		.data(data)
+		.enter()
+		.append("text")
+		.text(function(d){
+			return `${d} hrs`;
+		})
+		.attr('transform', function(d,i){
+			var translate = [(((barWidth + barPadding) * i) + barPadding + 2), svgHeight - (yScale(d)+3)];
+			return "translate(" + translate + ")";
+		})
+		.style("fill","#FFF").style("font-weight","bold");
+</script>
+
