--- a/app/views/review/last_week.html.erb
+++ b/app/views/review/last_week.html.erb
@@ -16,7 +16,7 @@
 		<% @meditation_days = @meditate.select{|date,done| done == true }.count %>
 		<%= @meditation_days %> of <%= @meditate.count %> meditation days = <%= (@meditation_days / @meditate.count.to_f * 100).round(2) %>%
 	</h5>
-	
+	<div class="meditation-chart"></div>
 </div>
 
 <div class="dash-section">
@@ -25,7 +25,7 @@
 		<% @visualization_days = @visualize.select{|date,done| done == true }.count %>
 		<%= @visualization_days %> of <%= @visualize.count %> visualization days = <%= (@visualization_days / @visualize.count.to_f * 100).round(2) %>%
 	</h5>
-	
+	<div class="visualization-chart"></div>
 </div>
 
 <div class="dash-section">
@@ -43,7 +43,7 @@
 		<% @no_alcohl_days = @alcohol.select{|date,done| done == true }.count %>
 		<%= @no_alcohl_days %> of <%= @alcohol.count %> no alcohol days = <%= (@no_alcohl_days / @alcohol.count.to_f * 100).round(2) %>%
 	</h5>
-
+	<div class="alcohol-chart"></div>
 </div>
 
 <div class="dash-section">
@@ -94,7 +94,7 @@
 		<% @shower_days = @shower.select{|date,done| done == true }.count %>
 		<%= @shower_days %> of <%= @shower.count %> shower days = <%= (@shower_days / @shower.count.to_f * 100).round(2) %>%
 	</h5>
-	
+	<div class="shower-chart"></div>
 </div>
 
 <div class="dash-section">
@@ -121,13 +121,259 @@
 
 
 
+<!-- JOURNAL -->
+<script>
+	var data = <%= @journal_chart_data %>;
 
+	var svgWidth = 400;
+	var svgHeight = 100;
+
+	var barPadding = 5;
+	var numberOfBars = data.length;
+	var barWidth = (svgWidth - (barPadding * (numberOfBars + 1))) / numberOfBars;
+
+	var svg = d3.select('.journal-chart')
+		.append('svg')
+			.attr('width', svgWidth)
+			.attr('height', svgHeight)
+			.attr('class','bar-chart')
+			.style('display','block').style('margin','auto');
+
+	var yScale = d3.scaleLinear()
+		.domain([0,d3.max(data)])
+		.range([0,svgHeight-12]);
+
+	var barChart = svg.selectAll('rect')
+		.data(data)
+		.enter()
+			.append('rect')
+			.attr('y', function(d){
+				return svgHeight - yScale(d);
+			})
+			.attr('height', function(d){
+				return yScale(d);
+			})
+			.attr('width', barWidth)
+			.attr('transform', function(d,i){
+				var translate = [(((barWidth + barPadding) * i) + barPadding), 0];
+				return "translate(" + translate + ")";
+			})
+			.style("fill","orange")
+
+	var text = svg.selectAll("text")
+		.data(data)
+		.enter()
+		.append("text")
+		.text(function(d){
+			if (d === 1){
+				return 'done';	
+			}
+			else{
+				return 'not done';
+			}
+			
+		})
+		.attr('transform', function(d,i){
+			if (d === 1){
+				var translate = [(((barWidth + barPadding) * i) + barPadding + 12), svgHeight - (yScale(d)+3)];
+			} else {
+				var translate = [(((barWidth + barPadding) * i) + barPadding + 1), svgHeight - (yScale(d)+3)];
+			}
+			return "translate(" + translate + ")";
+		})
+		.style("fill","#FFF").style("font-weight","bold");	
+</script>
+<!-- MEDITATION -->
+<script>
+	var data = <%= @meditation_chart_data %>;
+
+	var svgWidth = 400;
+	var svgHeight = 100;
+
+	var barPadding = 5;
+	var numberOfBars = data.length;
+	var barWidth = (svgWidth - (barPadding * (numberOfBars + 1))) / numberOfBars;
+
+	var svg = d3.select('.meditation-chart')
+		.append('svg')
+			.attr('width', svgWidth)
+			.attr('height', svgHeight)
+			.attr('class','bar-chart')
+			.style('display','block').style('margin','auto');
+
+	var yScale = d3.scaleLinear()
+		.domain([0,d3.max(data)])
+		.range([0,svgHeight-12]);
+
+	var barChart = svg.selectAll('rect')
+		.data(data)
+		.enter()
+			.append('rect')
+			.attr('y', function(d){
+				return svgHeight - yScale(d);
+			})
+			.attr('height', function(d){
+				return yScale(d);
+			})
+			.attr('width', barWidth)
+			.attr('transform', function(d,i){
+				var translate = [(((barWidth + barPadding) * i) + barPadding), 0];
+				return "translate(" + translate + ")";
+			})
+			.style("fill","orange")
+
+	var text = svg.selectAll("text")
+		.data(data)
+		.enter()
+		.append("text")
+		.text(function(d){
+			if (d === 1){
+				return 'done';	
+			}
+			else{
+				return 'not done';
+			}
+			
+		})
+		.attr('transform', function(d,i){
+			if (d === 1){
+				var translate = [(((barWidth + barPadding) * i) + barPadding + 12), svgHeight - (yScale(d)+3)];
+			} else {
+				var translate = [(((barWidth + barPadding) * i) + barPadding + 1), svgHeight - (yScale(d)+3)];
+			}
+			return "translate(" + translate + ")";
+		})
+		.style("fill","#FFF").style("font-weight","bold");	
+</script>
+<!-- VISUALIZATION -->
+<script>
+	var data = <%= @visualize_chart_data %>;
+
+	var svgWidth = 400;
+	var svgHeight = 100;
+
+	var barPadding = 5;
+	var numberOfBars = data.length;
+	var barWidth = (svgWidth - (barPadding * (numberOfBars + 1))) / numberOfBars;
+
+	var svg = d3.select('.visualization-chart')
+		.append('svg')
+			.attr('width', svgWidth)
+			.attr('height', svgHeight)
+			.attr('class','bar-chart')
+			.style('display','block').style('margin','auto');
+
+	var yScale = d3.scaleLinear()
+		.domain([0,d3.max(data)])
+		.range([0,svgHeight-12]);
+
+	var barChart = svg.selectAll('rect')
+		.data(data)
+		.enter()
+			.append('rect')
+			.attr('y', function(d){
+				return svgHeight - yScale(d);
+			})
+			.attr('height', function(d){
+				return yScale(d);
+			})
+			.attr('width', barWidth)
+			.attr('transform', function(d,i){
+				var translate = [(((barWidth + barPadding) * i) + barPadding), 0];
+				return "translate(" + translate + ")";
+			})
+			.style("fill","orange")
+
+	var text = svg.selectAll("text")
+		.data(data)
+		.enter()
+		.append("text")
+		.text(function(d){
+			if (d === 1){
+				return 'done';	
+			}
+			else{
+				return 'not done';
+			}
+			
+		})
+		.attr('transform', function(d,i){
+			if (d === 1){
+				var translate = [(((barWidth + barPadding) * i) + barPadding + 12), svgHeight - (yScale(d)+3)];
+			} else {
+				var translate = [(((barWidth + barPadding) * i) + barPadding + 1), svgHeight - (yScale(d)+3)];
+			}
+			return "translate(" + translate + ")";
+		})
+		.style("fill","#FFF").style("font-weight","bold");	
+</script>
+<!-- ALCOHOL -->
+<script>
+	var data = <%= @alcohol_chart_data %>;
+
+	var svgWidth = 400;
+	var svgHeight = 100;
+
+	var barPadding = 5;
+	var numberOfBars = data.length;
+	var barWidth = (svgWidth - (barPadding * (numberOfBars + 1))) / numberOfBars;
+
+	var svg = d3.select('.alcohol-chart')
+		.append('svg')
+			.attr('width', svgWidth)
+			.attr('height', svgHeight)
+			.attr('class','bar-chart')
+			.style('display','block').style('margin','auto');
+
+	var yScale = d3.scaleLinear()
+		.domain([0,d3.max(data)])
+		.range([0,svgHeight-12]);
+
+	var barChart = svg.selectAll('rect')
+		.data(data)
+		.enter()
+			.append('rect')
+			.attr('y', function(d){
+				return svgHeight - yScale(d);
+			})
+			.attr('height', function(d){
+				return yScale(d);
+			})
+			.attr('width', barWidth)
+			.attr('transform', function(d,i){
+				var translate = [(((barWidth + barPadding) * i) + barPadding), 0];
+				return "translate(" + translate + ")";
+			})
+			.style("fill","orange")
+
+	var text = svg.selectAll("text")
+		.data(data)
+		.enter()
+		.append("text")
+		.text(function(d){
+			if (d === 1){
+				return 'done';	
+			}
+			else{
+				return 'not done';
+			}
+			
+		})
+		.attr('transform', function(d,i){
+			if (d === 1){
+				var translate = [(((barWidth + barPadding) * i) + barPadding + 12), svgHeight - (yScale(d)+3)];
+			} else {
+				var translate = [(((barWidth + barPadding) * i) + barPadding + 1), svgHeight - (yScale(d)+3)];
+			}
+			return "translate(" + translate + ")";
+		})
+		.style("fill","#FFF").style("font-weight","bold");
+</script>
 <!-- EXERCISE -->
 <script>
 	//d3.select('.exercise-chart').append('h1').text('text')
 
 	var data = <%= @exercise_chart_data %>;
-	//var data = [7,6,5,5,3,4,2,3,2]
 
 	var svgWidth = 400;
 	var svgHeight = 100;
@@ -172,7 +418,7 @@
 			return `${d} mins`;
 		})
 		.attr('transform', function(d,i){
-			var translate = [(((barWidth + barPadding) * i) + barPadding + 2), svgHeight - (yScale(d)+3)];
+			var translate = [(((barWidth + barPadding) * i) + barPadding + 1), svgHeight - (yScale(d)+3)];
 			return "translate(" + translate + ")";
 		})
 		.style("fill","#FFF").style("font-weight","bold");
@@ -230,7 +476,11 @@
 			
 		})
 		.attr('transform', function(d,i){
-			var translate = [(((barWidth + barPadding) * i) + barPadding + 12), svgHeight - (yScale(d)+3)];
+			if (d === 1){
+				var translate = [(((barWidth + barPadding) * i) + barPadding + 12), svgHeight - (yScale(d)+3)];
+			} else {
+				var translate = [(((barWidth + barPadding) * i) + barPadding + 1), svgHeight - (yScale(d)+3)];
+			}
 			return "translate(" + translate + ")";
 		})
 		.style("fill","#FFF").style("font-weight","bold");
@@ -288,14 +538,18 @@
 			
 		})
 		.attr('transform', function(d,i){
-			var translate = [(((barWidth + barPadding) * i) + barPadding + 12), svgHeight - (yScale(d)+3)];
+			if (d === 1){
+				var translate = [(((barWidth + barPadding) * i) + barPadding + 12), svgHeight - (yScale(d)+3)];
+			} else {
+				var translate = [(((barWidth + barPadding) * i) + barPadding + 1), svgHeight - (yScale(d)+3)];
+			}
 			return "translate(" + translate + ")";
 		})
 		.style("fill","#FFF").style("font-weight","bold");
 </script>
-<!-- JOURNAL -->
+<!-- SHOWER -->
 <script>
-	var data = <%= @journal_chart_data %>;
+	var data = <%= @shower_chart_data %>;
 
 	var svgWidth = 400;
 	var svgHeight = 100;
@@ -304,7 +558,7 @@
 	var numberOfBars = data.length;
 	var barWidth = (svgWidth - (barPadding * (numberOfBars + 1))) / numberOfBars;
 
-	var svg = d3.select('.journal-chart')
+	var svg = d3.select('.shower-chart')
 		.append('svg')
 			.attr('width', svgWidth)
 			.attr('height', svgHeight)
@@ -346,7 +600,11 @@
 			
 		})
 		.attr('transform', function(d,i){
-			var translate = [(((barWidth + barPadding) * i) + barPadding + 12), svgHeight - (yScale(d)+3)];
+			if (d === 1){
+				var translate = [(((barWidth + barPadding) * i) + barPadding + 12), svgHeight - (yScale(d)+3)];
+			} else {
+				var translate = [(((barWidth + barPadding) * i) + barPadding + 1), svgHeight - (yScale(d)+3)];
+			}
 			return "translate(" + translate + ")";
 		})
 		.style("fill","#FFF").style("font-weight","bold");
@@ -405,7 +663,7 @@
 			return `${d} hrs`;
 		})
 		.attr('transform', function(d,i){
-			var translate = [(((barWidth + barPadding) * i) + barPadding + 2), svgHeight - (yScale(d)+3)];
+			var translate = [(((barWidth + barPadding) * i) + barPadding + 8), svgHeight - (yScale(d)+3)];
 			return "translate(" + translate + ")";
 		})
 		.style("fill","#FFF").style("font-weight","bold");
@@ -461,10 +719,10 @@
 		.enter()
 		.append("text")
 		.text(function(d){
-			return `${d} hrs`;
+			return d;
 		})
 		.attr('transform', function(d,i){
-			var translate = [(((barWidth + barPadding) * i) + barPadding + 2), svgHeight - (yScale(d)+3)];
+			var translate = [(((barWidth + barPadding) * i) + barPadding + 18), svgHeight - (yScale(d)+3)];
 			return "translate(" + translate + ")";
 		})
 		.style("fill","#FFF").style("font-weight","bold");
