successful values-based font scaling in d3 on dashboards / scratch view

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -139,3 +139,12 @@ a:visited{
 .bar-chart-text{
 	font-size: 0.5em;
 }
+
+
+
+.text-box{
+	margin: 2vh 0;
+	padding: 2vh;
+	border: dotted 1px black;
+	display: inline-block;
+}
