--- a/app/views/consumptions/partials/_mini_form.html.erb
+++ b/app/views/consumptions/partials/_mini_form.html.erb
@@ -26,7 +26,7 @@
       </td>
       <td>
         <div class="form-group">
-          <%= form.select :feeling_score, [["feel good",1],["feel neutral", 0],["feel bad",-1]], {}, {class: "form-control"}  %>
+          <%= form.select :feeling_score, [["feel neutral", 0],["feel good",1],["feel bad",-1]], {}, {class: "form-control"}  %>
         </div>      
       </td>
       <td>
