(1) new checkbox partial at top of today dash (homepage) for yesterday's checks. (2) Habits.create_todays_habits method now creates all habits including exercise, sleep and hrv. this method now runs when dashboards/today loads and when habits/index loads

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -139,3 +139,11 @@ a:visited{
 .bar-chart-text{
 	font-size: 0.5em;
 }
+
+
+
+.dotted{
+	border-top: dotted 2px black;
+	width: 66vw;
+	margin-top: 4vh;
+}
