new weekly data model + seed + updating on index load

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -29,6 +29,7 @@
           Reviews
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="/weekly_data">Weekly Data</a>
           <a class="dropdown-item" href="/review/this_week">This Week</a>
           <a class="dropdown-item" href="/review/last_week">Last Week</a>
           <a class="dropdown-item" href="/review/trailing_seven_days">Trailing 7-day</a>
